--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1391,14 +1391,14 @@ $topbar-dropdown-toggle-size: 1px;
 // $topbar-link-color-active: $white;
 // $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
-$topbar-link-font-size: rem-calc(16);
+$topbar-link-font-size: rem-calc(25);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
 // $topbar-link-bg: $topbar-bg;
 // $topbar-link-bg-color-hover: $charcoal;
 $topbar-link-bg-hover: #888905;
 $topbar-link-bg-active: #888905;
 $topbar-link-bg-active-hover: scale-color(#888905, $lightness: -14%);
-$topbar-link-font-family: 'Anton' ;
+$topbar-link-font-family: 'Yanone Kaffeesatz' ;
 // $topbar-link-text-transform: none;
 $topbar-link-padding: ($topbar-height / 4);
 // $topbar-back-link-size: $h5-font-size;
